# WOMBAT

./: .gitignore  README.md
ESP32/ArchivoFinal/: ArchivoFinal.ino
ESP32/ESP32correo/: ESP32correo.ino
ESP32/ledBlink/: ledBlink.ino
ESP32/pubsub/: pubsub.pde
ESP32/rosserial/: rosserial.ino
ros_ws/src/custom_msgs/: CMakeLists.txt  package.xml
ros_ws/src/custom_msgs/msg/: Cell.msg  DB_msg.msg  DHT11_msg.msg  Path.msg  QR_msg.msg  ranges.msg  vel_cmd.msg
ros_ws/src/navegation/: CMakeLists.txt  package.xml
ros_ws/src/navegation/config/: robot_params.yaml
ros_ws/src/navegation/include/navegation/: .utils.h.swp  ros_utils.h  utils.h
ros_ws/src/navegation/launch/: basic_sim.launch  nav.launch  start_navigation.launch
ros_ws/src/navegation/lib/: ros_utils.cpp  utils.cpp
ros_ws/src/navegation/rviz/: pose_sim.rviz
ros_ws/src/navegation/src/: .KF.py.swp  KF.py  control.cpp  control.py  kf.cpp  odom.cpp  odometry.py  path_publisher.py  simulation.py  trajectory.py  wheel_sim.py
ros_ws/src/navegation/src/headers/: control.h  kf.h  odom.h
ros_ws/src/simulation/: CMakeLists.txt  package.xml
ros_ws/src/simulation/config/: joints.yaml
ros_ws/src/simulation/launch/: basic_sim.launch  laser_sim.launch  wombat_gazebo.launch  wombat_rviz.launch  wombat_sim.launch
ros_ws/src/simulation/rviz/: WOMBAT_monitor.rviz  WOMBAT_sim.rviz  laser_sim.rviz  pose_sim.rviz
ros_ws/src/simulation/src/: msg_mapping.py  odom_tf.cpp  odom_tf.h  simulation.py  wheel_sim.py
ros_ws/src/simulation/urdf/: camera.xacro  chassis.xacro  lidar.xacro  parameters.xacro  wheel.xacro  wombat.gazebo  wombat.xacro
ros_ws/src/simulation/worlds/: base_world.world
ros_ws/src/slam/: CMakeLists.txt  package.xml
ros_ws/src/slam/include/slam/: icp.h  kd_tree.h  pose_graph.h  utils.h
ros_ws/src/slam/launch/: mapping_monitor.launch  mapping_wombat.launch  slam_start.launch
ros_ws/src/slam/lib/: icp.cpp  kd_tree.cpp  utils.cpp
ros_ws/src/slam/src/: slam.cpp  test.cpp
ros_ws/src/slam/src/headers/: slam.h
ros_ws/src/vision/: CMakeLists.txt  package.xml
ros_ws/src/vision/config/: params_cloud.yaml  params_grid.yaml
ros_ws/src/vision/src/: QR_scan.py  box_detect.py  laser_map.py  laser_occupancy.py  point_cloud.py  trajectory.py
ros_ws/src/vision/src/vision_nodes/: conversions.py  trajectory_algs.py  utils.py
